# ckt-analysis-assistant

./: .gitignore  main.py  pyproject.toml
ckt/: metadata.yaml
core/: analysis.py  column_selector.py  config.py  data_loader.py  llm.py  schemas.py
data/input/: gold_student_exam_summary.csv  gold_student_progression_with_demographics.csv
notebook/: analysis_py.ipynb
